<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_graph.xml"
    app:startDestination="@id/navigation_news_fragment">

    <fragment
        android:id="@+id/navigation_news_fragment"
        android:name="com.ivanov.newsapi.presentation.fragments.news.NewsFragment"
        android:label="@string/title_news"
        tools:layout="@layout/news_fragment">
        <action
            android:id="@+id/action_newsFragment_to_webViewFragment"
            app:destination="@id/navigation_webview_fragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_webview_fragment"
        android:name="com.ivanov.newsapi.presentation.fragments.news_overview.NewsOverviewFragment"
        tools:layout="@layout/fragment_news_overview" />

    <fragment
        android:id="@+id/navigation_map_fragment"
        android:name="com.ivanov.newsapi.presentation.fragments.map.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/map_fragment" />

    <fragment
        android:id="@+id/navigation_select_image_fragment"
        android:name="com.ivanov.newsapi.presentation.fragments.images.SelectImageFragment"
        android:label="@string/title_image"
        tools:layout="@layout/fragment_select_image">
        <action
            android:id="@+id/action_navigation_select_image_fragment_to_navigation_show_image_fragment"
            app:destination="@id/navigation_show_image_fragment" />
    </fragment>
    <fragment
        android:id="@+id/navigation_show_image_fragment"
        android:name="com.ivanov.newsapi.presentation.fragments.images.ShowImageFragment"
        android:label="@string/title_show_image"
        tools:layout="@layout/fragment_show_image" />
</navigation>